fix: modernize deprecated API usage per modernizer-maven-plugin