@@ -24,6 +24,7 @@ import static org.mockito.Mockito.when;
 import jakarta.servlet.ServletContext;
 
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -269,7 +270,7 @@ class AbstractTomcatContainerTest {
     when(context.getConfigFile()).thenReturn(temp.toUri().toURL());
     assertNotNull(container.getConfigFile(context));
 
-    when(context.getConfigFile()).thenReturn(new URL("https://example.com/context.xml"));
+    when(context.getConfigFile()).thenReturn(URI.create("https://example.com/context.xml").toURL());
     assertNull(container.getConfigFile(context));
   }
 
